# py313-monorepo-starter

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  checklist.md  docker-compose.yml  pyproject.toml  tasks.md
.github/: pull_request_template.md
.github/workflows/: README.md  python313-ci.yml
docs/: BRANCH_STRATEGY.md  CI_CACHE_STRATEGY.md  CI_CD_SPEC.md  DIRECTORY_SPEC.md  EVIDENCE_LOG.md  PDM_UV_WORKSPACE_UPGRADE_DRAFT.md  PDM_UV_WORKSPACE_UPGRADE_GUIDE.md  PYPROJECT_REQUIREMENTS_MIGRATION_RUNBOOK.md  REGRESSION_TEST_REPORT_20260414.md
docs/backups/: requirements.txt.bak.20260414_133050
scripts/: README.md
src/: __init__.py  core.py
tests/: test_core.py
